--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="wrapper" id="wrapper">
+    <div class="wrapper" id="app">
         <header class="app_header">
             <div class="app_header_title">
                 <h1>kanban board</h1>
